TODO: slow drag selection on remote display - other things seem fast (rxvt illness, motion hints?)
TODO: default selection should handle = better
WISH: look into XAddConnectionWatch, does anybody need that?
WISH: anyevent mouse notification / manage MotionMask better.
WISH: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep look.
DUMB: support tex fonts

	- readline perl extension now requires shift-click instead of a normal
          click.
	- improve property handling for -pe tabbed: avoid unnecessary property
          changes (for kde's benefit) at the expense of extra round-trips,
          improve size hint setting.
        - modified XIM according to a patch sent by Takano Akio that sets
          the preedit rectangle for OverTheSpot, which helps some input methods
          to correctly position their preedit window.
        - un-optimise the line clearing on newly scrolled-in lines a bit: the
          former reasoning was that any fg colour on default bg looks the same
          in empts spaces, but thats not true when reversing (e.g. selection),
          so also check for matching fg colours. This fixes the problem where
          selecting newly scrolled-in lines would exhibit wrong colours.
        - fix a race resulting in a crash on exiting.

7.6  Fri Feb 10 08:52:36 CET 2006
	- changed interpretation of [alpha] colour prefix.
        - +option now really sets the option to default, instead of using the
          resource value.
        - options that require an argument now really _require_ an argument.
        - the tabbed extension now forwards focus and keys events to th
          relevant tab window.
        - tab colours are now configurable and have sensible defaults
          (initial patch by hednod).
        - option menu is extendable, readline, selection and
          selection-autotransform can now be disabled/enabled at runtime.